--- a/index.html
+++ b/index.html
@@ -1,47 +1,171 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Classifica Torneo di Katan</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <style>
+    /* Aggiunte di stile personalizzate */
+    h2, h4 {
+      margin-top: 30px;
+      margin-bottom: 15px;
+    }
+    table {
+      max-width: 800px;
+      margin: auto;
+    }
+  </style>
 </head>
 <body class="bg-light p-3">
   <div class="container">
     <h2 class="text-center mb-4">Classifica Torneo di Katan</h2>
 
     <!-- Form per inserire risultati -->
-    <form id="resultForm">
+    <form id="resultForm" class="mb-4">
       <div class="mb-2">
-        <input type="text" class="form-control" id="playerName" placeholder="Nome giocatore" required>
+        <input type="text" class="form-control" id="playerName" placeholder="Nome giocatore" required />
       </div>
       <div class="mb-2">
-        <input type="number" class="form-control" id="points" placeholder="Punti" required>
+        <input type="number" class="form-control" id="points" placeholder="Punti" required min="0" />
       </div>
       <div class="mb-2">
-        <input type="date" class="form-control" id="matchDate" required>
+        <input type="date" class="form-control" id="matchDate" required />
+      </div>
+      <div class="form-check mb-3">
+        <input class="form-check-input" type="checkbox" value="" id="victory" />
+        <label class="form-check-label" for="victory">
+          Vittoria
+        </label>
       </div>
       <button type="submit" class="btn btn-primary w-100">Inserisci Risultato</button>
     </form>
 
-    <hr>
+    <hr />
 
-    <!-- Tabella classifica -->
-    <h4 class="mt-4">Classifica</h4>
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>Giocatore</th>
-          <th>Punti Totali</th>
-          <th>Partite Giocate</th>
-        </tr>
-      </thead>
-      <tbody id="leaderboard">
-        <!-- Popolata via JS -->
-      </tbody>
-    </table>
+    <!-- Classifica dettagliata (tutti i record) -->
+    <div id="classifica">
+      <h4>Classifica Dettagliata</h4>
+      <p>Caricamento dati...</p>
+    </div>
+
+    <!-- Totali per giocatore -->
+    <div id="totali">
+      <h4>Totali per Giocatore</h4>
+      <p>Caricamento dati...</p>
+    </div>
+
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    const apiKey = 'AIzaSyATTZnPzPLGBi0kKbj0ZBCAWb-0n5l1pRo';
+    const spreadsheetId = '1G_nHw8XrB4N0yAA5QoOLSLuIzpmQ_isuaVA-7GrPLMU';
+    const range = 'TorneoKatan!A1:D150';
+
+    const url = `https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${range}?key=${apiKey}`;
+
+    // Funzione per caricare e mostrare dati
+    function loadData() {
+      fetch(url)
+        .then(response => response.json())
+        .then(data => {
+          const rows = data.values;
+          if (rows && rows.length > 1) {
+            const header = rows[0];
+            let dataRows = rows.slice(1);
+
+            // Ordina per punti (colonna 2, indice 1), decrescente
+            dataRows.sort((a, b) => {
+              const puntiA = parseInt(a[1]) || 0;
+              const puntiB = parseInt(b[1]) || 0;
+              return puntiB - puntiA;
+            });
+
+            // Costruisci tabella classifica dettagliata
+            let htmlClassifica = '<table class="table table-striped table-bordered">';
+            htmlClassifica += '<thead><tr>';
+            header.forEach(cell => {
+              htmlClassifica += `<th>${cell}</th>`;
+            });
+            htmlClassifica += '</tr></thead><tbody>';
+
+            dataRows.forEach(row => {
+              htmlClassifica += '<tr>';
+              row.forEach(cell => {
+                htmlClassifica += `<td>${cell}</td>`;
+              });
+              htmlClassifica += '</tr>';
+            });
+            htmlClassifica += '</tbody></table>';
+
+            document.getElementById('classifica').innerHTML = `<h4>Classifica Dettagliata</h4>${htmlClassifica}`;
+
+            // Calcolo totali per giocatore
+            const risultati = {};
+            dataRows.forEach(row => {
+              const nome = row[0];
+              const punti = parseInt(row[1]) || 0;
+              const vittoria = parseInt(row[2]) || 0;
+
+              if (!risultati[nome]) {
+                risultati[nome] = { punti: 0, vittorie: 0, partite: 0 };
+              }
+              risultati[nome].punti += punti;
+              risultati[nome].vittorie += vittoria;
+              risultati[nome].partite++;
+            });
+
+            // Costruisci tabella totali
+            let htmlTotali = '<table class="table table-striped table-bordered">';
+            htmlTotali += '<thead><tr><th>Giocatore</th><th>Punti Totali</th><th>Vittorie Totali</th><th>Partite Giocate</th></tr></thead><tbody>';
+
+            for (const nome in risultati) {
+              htmlTotali += `<tr><td>${nome}</td><td>${risultati[nome].punti}</td><td>${risultati[nome].vittorie}</td><td>${risultati[nome].partite}</td></tr>`;
+            }
+
+            htmlTotali += '</tbody></table>';
+
+            document.getElementById('totali').innerHTML = `<h4>Totali per Giocatore</h4>${htmlTotali}`;
+
+          } else {
+            document.getElementById('classifica').innerHTML = '<p>Nessun dato trovato</p>';
+            document.getElementById('totali').innerHTML = '';
+          }
+        })
+        .catch(err => {
+          console.error('Errore nel recupero dati:', err);
+          document.getElementById('classifica').innerHTML = '<p>Errore nel caricamento dati</p>';
+          document.getElementById('totali').innerHTML = '';
+        });
+    }
+
+    // Carica dati all'apertura pagina
+    loadData();
+
+    // Gestione invio form (aggiungi risultato)
+    document.getElementById('resultForm').addEventListener('submit', function (e) {
+      e.preventDefault();
+
+      const nome = document.getElementById('playerName').value.trim();
+      const punti = parseInt(document.getElementById('points').value);
+      const dataPartita = document.getElementById('matchDate').value;
+      const vittoria = document.getElementById('victory').checked ? 1 : 0;
+
+      if (!nome || isNaN(punti) || !dataPartita) {
+        alert('Compila tutti i campi correttamente.');
+        return;
+      }
+
+      // Qui devi implementare la logica per inviare i dati al Google Sheet
+      // Ad esempio tramite fetch POST verso un tuo endpoint o Apps Script web app
+      // Per ora facciamo un alert simulato
+
+      alert(`Invio risultato:\nGiocatore: ${nome}\nPunti: ${punti}\nVittoria: ${vittoria}\nData: ${dataPartita}`);
+
+      // Dopo invio reale, pulisci form e ricarica dati
+      this.reset();
+      loadData();
+    });
+  </script>
 </body>
 </html>
